--- a/src/View/Visitor/Contact/index.html.twig
+++ b/src/View/Visitor/Contact/index.html.twig
@@ -9,7 +9,7 @@
             </div>
             <div class="col-lg-6 col-xl-6">
                 <div class="card">
-                    <iframe src="https://fr.mappy.com/poi/4d6df026b9eb250702e0d0c3#/4/M2/TGeoentity/F4d6df026b9eb250702e0d0c3/N151.12061,6.11309,1.90587,47.89993/Z19/" height="550"></iframe>
+                    <iframe src=" http://umap.openstreetmap.fr/fr/map/anonymous-edit/257889:URftRFMW4VFuoEeCv1sZZ9-9tHk" height="550"></iframe>
                 </div>
             </div>
         </div>
