--- a/src/View/Visitor/Contact/index.html.twig
+++ b/src/View/Visitor/Contact/index.html.twig
@@ -1,17 +1,24 @@
 {% extends 'base.html.twig' %} {% block content %}
+<div class="container">
     <div class="container">
         <h2>Où nous situons nous?</h2>
         <div class="row justify-content-center">
-            <div class="col-lg-6 col-xl-6">
-                <p>
-                    C’EST MA MAISON ! 306, RUE DE BOURGOGNE 45000 ORLEANS Tel. : 02 38 53 72 13
-                </p>
+            <div class="col-lg-6 col-xl-6 d-flex align-items-center">
+                <div>
+                    <p>C’EST MA MAISON !</p>
+                    <p>306, RUE DE BOURGOGNE</p>
+                    <p>45000 ORLEANS</p>
+                    <p>Tel. : 02 38 53 72 13</p>
+                </div>
             </div>
             <div class="col-lg-6 col-xl-6">
                 <div class="card">
-                    <iframe src=" http://umap.openstreetmap.fr/fr/map/anonymous-edit/257889:URftRFMW4VFuoEeCv1sZZ9-9tHk" height="550"></iframe>
+                    <iframe src="https://www.openstreetmap.org/export/embed.html?bbox=1.9038158655166628%2C47.89913920274405%2C1.9071766734123232%2C47.90071624767519&amp;layer=mapnik&amp;marker=47.899927731214625%2C1.9054962694644928" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" height="420px"></iframe>
+                    <br/>
+                    <small>
+                        <a href="https://www.openstreetmap.org/?mlat=47.89993&amp;mlon=1.90550#map=19/47.89993/1.90550">Afficher une carte plus grande</a>
+                    </small>
                 </div>
             </div>
         </div>
-    </div>
 {% endblock content %}
