création de la class ContactController.php et mettre la route visitor dans le routing

--- a/src/View/Visitor/Contact/index.html.twig
+++ b/src/View/Visitor/Contact/index.html.twig
@@ -1,4 +1,5 @@
-{% extends 'base.html.twig' %} {% block content %}
+{% extends 'Visitor/layout.html.twig' %}
+{% block content %}
 <div class="container">
     <div class="container">
         <h2>Où nous situons nous?</h2>
