validation de la vue de la Us12 dans le navigateur

--- a/src/View/Visitor/Contact/index.html.twig
+++ b/src/View/Visitor/Contact/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'Visitor/layout.html.twig' %}
+{% extends 'layout.html.twig' %}
 {% block content %}
 <div class="container">
     <div class="container">
